# Motion

./: CMakeLists.txt  README.md  vcpkg.json
Core/: PathFinder.cpp  Vision.cpp  Vision.h
Core/Algorithms/: Dijkstra.cpp  Dijkstra.h
Core/Algorithms/FindMethods/: PreprocessedGraph.cpp  PreprocessedGraph.h  RRT.cpp
Core/Generate/: GenerateLabyrinth.cpp
Core/States/: IdleState.cpp  ReshapeState.h
Core/Structures/: Graph.h  Polygon.cpp
Forms/AboutDialog/: AboutDialog.ui
Motion/: Motion.sln  Motion.vcxproj  Motion.vcxproj.filters  main.cpp
Motion/Core/: ConfigurationSpace.cpp  ConfigurationSpace.h  DeviceGraphicsItem.cpp  DeviceGraphicsItem.h  DisplayView.cpp  DisplayView.h  FileManager.cpp  PathFinder.h
Motion/Core/Algorithms/: ConvexHull.cpp  ConvexHull.h  Utils.cpp  Utils.h  Voronoi.cpp  Voronoi.h
Motion/Core/Generate/: Generate.h  GenerateLabyrinth.cpp  GenerateLabyrinth.h  GeneratePolyLabyrinth.cpp  GeneratePolyLabyrinth.h  GenerateRandom.cpp  GenerateRandom.h
Motion/Core/States/: CreateState.cpp  CreateState.h  DragState.cpp  DragState.h  IdleState.cpp  IdleState.h
Motion/Core/Structures/: Graph.cpp  Graph.h  Polygon.cpp  Polygon.h
Motion/Forms/AppWindow/: AppWindow.h  (+2 more)
forms/: AppWindow.ui  about_dialog.ui  app_window.ui
forms/AboutDialog/: AboutDialog.h
forms/AppWindow/: AppWindow.cpp  AppWindow.h
include/: ConfigurationSpace.h  DeviceGraphicsItem.h  DisplayView.h  FileManager.h  PathFinder.h  Vision.h  about_dialog.h  app_window.h  configuration_space.h  device_graphics_item.h  display_view.h  file_manager.h  path_finder.h
include/Algorithms/: Dijkstra.h  Utils.h  Voronoi.h  convex_hull.h
include/Generate/: Generate.h  generate_labyrinth.h  generate_poly_labyrinth.h
include/States/: CreateState.h  DragState.h  IState.h  IdleState.h  ReshapeState.h
include/Structures/: Graph.h  Polygon.h
include/motion/: about_dialog.h  app_window.h  configuration_space.h  device_graphics_item.h  display_view.h  file_manager.h  path_finder.h  vision.h
include/states/: create_state.h  drag_state.h  idle_state.h  reshape_state.h  state.h
resources/: icon.qrc
src/: ConfigurationSpace.cpp  DeviceGraphicsItem.cpp  DisplayView.cpp  FileManager.cpp  PathFinder.cpp  Vision.cpp  about_dialog.cpp  app_window.cpp  configuration_space.cpp  device_graphics_item.cpp  display_view.cpp  file_manager.cpp  main.cpp  path_finder.cpp
src/Algorithms/: ConvexHull.cpp  Dijkstra.cpp  Utils.cpp  Voronoi.cpp  convex_hull.cpp
src/Core/: DisplayView.h
src/Generate/: GenerateLabyrinth.cpp  GeneratePolyLabyrinth.cpp  GenerateRandom.cpp
src/States/: CreateState.cpp  DragState.cpp  IdleState.cpp  ReshapeState.cpp
src/Structures/: Graph.cpp  Polygon.cpp
src/generate/: generate_labyrinth.cpp  generate_poly_labyrinth.cpp  generate_random.cpp
src/states/: create_state.cpp  drag_state.cpp  idle_state.cpp  reshape_state.cpp
(+54 files in other folders)
